[package]
name = "msg"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "msg"
path = "lib.rs"
test = false
doctest = false

[dependencies]
bitflags = "1.0"
enum-iterator = "0.2.0"
ipc-channel = "0.11"
log = "0.4"
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { path = "../malloc_size_of_derive" }
serde = "1.0.60"
servo_channel = {path = "../channel"}
webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}

[dev-dependencies]
size_of_test = {path = "../size_of_test"}
